Apply 04_fix-paint-memoryleak.patch from Debian

https://sources.debian.org/data/main/libg/libgnomecanvas/2.30.3-4.1/debian/patches/04_fix-paint-memoryleak.patch

https://bugzilla.gnome.org/show_bug.cgi?id=729717