libgnomecanvas/gnome-canvas.c
@@ -3111,8 +3111,6 @@ paint (GnomeCanvas *canvas)
 	visible_rect.x1 = visible_rect.x0 + GTK_WIDGET (canvas)->allocation.width;
 	visible_rect.y1 = visible_rect.y0 + GTK_WIDGET (canvas)->allocation.height;
 
-	region = gdk_region_new ();
-
 	for (i = 0; i < n_rects; i++) {
 		ArtIRect clipped;
 
